Fixed code blocks

--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ url: "http://koutny.org" # the base hostname & protocol for your site
 gitweb: "https://github.com/Werkov/Werkov.github.io/commits/master/"
 
 # Build settings
+excerpt_separator: ""   # Workaround for http://blog.slaks.net/2013-08-09/jekyll-tag-was-never-closed
 markdown: kramdown
